# meshcore-net-bridge

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/: wiring-heltec-v3-rpi.md
meshcore_bridge/: __init__.py  config.py  main.py  mqtt_handler.py  protocol.py  serial_handler.py
